Refatorado o codigo para ingles.